Fixed layout issues on iOS devices and Firefox where input fields didn't have an explicit height set

--- a/BoredPass/public/css/_default.less
+++ b/BoredPass/public/css/_default.less
@@ -52,6 +52,7 @@
     position: absolute;
     bottom: 0;
     right: 0;
+    font-size: 0px;
 }
 
 .activities > .activity > .content > .photos > .thumb-strip > .thumb {
